src/objects/Randomization_Condition__c.object
<CustomObject>
    <fields>
        <fullName>ER__c</fullName>
        <label>ER</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligble__c</fullName>
        <label>Eligble</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FISH__c</fullName>
        <label>FISH</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHC__c</fullName>
        <label>IHC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP__c</fullName>
        <label>MP</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <label>PR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP__c</fullName>
        <label>TP</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Number__c</fullName>
        <label>Test Case Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XML_HER2__c</fullName>
        <label>XML HER2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_HR__c</fullName>
        <label>XML HR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_MP__c</fullName>
        <label>XML MP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Randomization Condition</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Randomization Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Randomization Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>